main structure changes and logo changes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <header>
             <h1>
                 <a href="index.html" title="Logo">
-                    Logo
+                    LOGO
                 </a>
             </h1>
         </header>
+        <main>
+            <h2>Main Starts Here</h2>
+        </main>
     </div>
 </body>
 </html>
